added resset, bug fixs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="C:\Users\dille\Desktop\Challenges\My-Portfolio\assets\styles.css">
+  <link rel="stylesheet" href="assets\CSS\reset.css">
+  <link rel="stylesheet" href="assets\CSS\styles.css">
   <title>Dillen's Portfolio</title>
 </head>
 <body>
@@ -30,23 +31,46 @@
     <h2>Work</h2>
     <div class="applications">
       <div class="application">
-        <a href="https://dillengrant.github.io/Refactoring-existing-code/"><img src="app1.jpg" alt="Refactoring"></a>
+        <a href="https://dillengrant.github.io/Refactoring-existing-code/">
+          <img src="assets/images/refactor 1.JPG" alt="Refactoring">
+          <h5> Refactoring existing code</h5>
+        </a>
       </div>
       <div class="application">
-        <a href="application2-link"><img src="app2.jpg" alt="more coming soon"></a>
+        <a href="application2-link">
+          <img src="" alt="more coming soon">
+        </a>
+      </div>
+      <div class="application">
+        <a href="application2-link">
+          <img src="" alt="more coming soon">
+        </a>
+      </div>
+      <div class="application">
+        <a href="application2-link">
+          <img src="" alt="more coming soon">
+        </a>
+      </div>
+      <div class="application">
+        <a href="application2-link">
+          <img src="" alt="more coming soon">
+        </a>
+      </div>
+      <div class="application">
+        <a href="application2-link">
+          <img src="" alt="more coming soon">
+        </a>
       </div>
       <!-- Add more applications here -->
     </div>
   </section>
   
   <section id="contact">
-    <h2>Contact</h2>
+    <h2>Contact Info</h2>
         <ul>
             <li>Email: dillen.grant72@gmail.com</li>
             <li>GitHub: <a href="https://github.com/DillenGrant">Dillen Grant</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Linkten</li>
         </ul>
   </section>
 </body>
