add README & Contact

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="work">
     <h2>Work</h2>
     <div class="applications">
-      <div class="application">
+      <div class="application" id="firstapp">
         <a href="https://dillengrant.github.io/Refactoring-existing-code/">
           <img src="assets/images/refactor 1.JPG" alt="Refactoring">
           <h5> Refactoring existing code</h5>
@@ -69,8 +69,8 @@
     <h2>Contact Info</h2>
         <ul>
             <li>Email: dillen.grant72@gmail.com</li>
-            <li>GitHub: <a href="https://github.com/DillenGrant">Dillen Grant</a></li>
-            <li>Linkten</li>
+            <li><a href="https://github.com/DillenGrant">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/dillen-grant-4b417928b/">Linkten</a></li>
         </ul>
   </section>
 </body>
