added reel roulette

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </section>
   
   <section id="work">
-    <h2>Work</h2>
+    <h2>Projects</h2>
     <div class="applications">
       <div class="application" id="firstapp">
         <a href="https://dillengrant.github.io/Refactoring-existing-code/">
@@ -37,8 +37,9 @@
         </a>
       </div>
       <div class="application">
-        <a href="application2-link">
-          <img src="" alt="more coming soon">
+        <a href="https://krich2022.github.io/reel-roulette/">
+          <img src="./assets/images/Reel-Roulette.JPG" alt="Reel-Roulette">
+          <h5>Reel Roulette</h5>
         </a>
       </div>
       <div class="application">
